--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 body {
     background-color: #111;
     color: #c41e3a;
-    font-family: 'UnifrakturCook', cursive;
+    font-family: 'Garamond', cursive;
     text-align: center;
     margin: 0;
     padding: 0;
